; ModuleID = '/home/carl/AnghaBench/jemalloc/test/unit/extr_emitter.c_emit_nested_dict.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/unit/extr_emitter.c_emit_nested_dict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"json1\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"Dict 1\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"json2\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"Dict 2\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"primitive\00", align 1
@.str.5 = private unnamed_addr constant [12 x i8] c"A primitive\00", align 1
@emitter_type_int = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [6 x i8] c"json3\00", align 1
@.str.7 = private unnamed_addr constant [7 x i8] c"Dict 3\00", align 1
@.str.8 = private unnamed_addr constant [6 x i8] c"json4\00", align 1
@.str.9 = private unnamed_addr constant [7 x i8] c"Dict 4\00", align 1
@.str.10 = private unnamed_addr constant [18 x i8] c"Another primitive\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @emit_nested_dict to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_nested_dict(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 123, i32* %3, align 4
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @emitter_begin(i32* %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @emitter_dict_begin(i32* %6, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @emitter_dict_begin(i32* %8, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @emitter_type_int, align 4
  %12 = call i32 @emitter_kv(i32* %10, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0), i32 %11, i32* %3)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @emitter_dict_end(i32* %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @emitter_dict_begin(i32* %15, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i64 0, i64 0))
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @emitter_dict_end(i32* %17)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @emitter_dict_end(i32* %19)
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @emitter_dict_begin(i32* %21, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.9, i64 0, i64 0))
  %23 = load i32*, i32** %2, align 8
  %24 = load i32, i32* @emitter_type_int, align 4
  %25 = call i32 @emitter_kv(i32* %23, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.10, i64 0, i64 0), i32 %24, i32* %3)
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @emitter_dict_end(i32* %26)
  %28 = load i32*, i32** %2, align 8
  %29 = call i32 @emitter_end(i32* %28)
  ret void
}

declare dso_local i32 @emitter_begin(i32*) #1

declare dso_local i32 @emitter_dict_begin(i32*, i8*, i8*) #1

declare dso_local i32 @emitter_kv(i32*, i8*, i8*, i32, i32*) #1

declare dso_local i32 @emitter_dict_end(i32*) #1

declare dso_local i32 @emitter_end(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
